--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -9,6 +9,18 @@
     <p align="center"> Новости спорта с портала <span th:text="${ url}"></span> на <span th:text="${date}"/> </p>
 </h2>
 <p align="center"> <button type="button" th:onclick="|window.location.href=''|">Refresh</button></p>
+<th:block th:if="${url} == ${m1}">
+ <button value = match, type="button" th:onclick="|window.location.href='/match'|">Перейти на "matchtv.ru"</button>
+ <button value = mk, type="button" th:onclick="|window.location.href='/mk'|">Перейти на "mk.ru"</button>
+</th:block>
+<th:block th:if="${url} == ${m2}">
+<button value = rbk, type="button" th:onclick="|window.location.href='/rbk'|">Перейти на "rbk.ru"</button>
+<button value = mk, type="button" th:onclick="|window.location.href='/mk'|">Перейти на "mk.ru"</button>
+</th:block>
+<th:block th:if="${url} == ${m3}">
+    <button value = rbk, type="button" th:onclick="|window.location.href='/rbk'|">Перейти на "rbk.ru"</button>
+    <button value = match, type="button" th:onclick="|window.location.href='/match'|">Перейти на "matchtv.ru"</button>
+</th:block>
 <div>
     <h3>
         <span th:each="article : ${articles}">
